<resources>
    <string name="app_name">MvpStructure</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="name_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_button_text">登录</string>
    <string name="default_name">15682074785</string>
    <string name="default_password">111111</string>
    <string name="network_error">网络错误，请检查网络设置</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_main">Movie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_movie_detail">电影详情</string>
    <string name="noData">没有数据</string>
    <string name="loading">加载中...</string>
</resources>
